c4prj2_input/grade.txt
Grading at Wed Mar 10 22:12:34 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:28:5: error: value computed is not used [-Werror=unused-value]
     *j++;
     ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
